--- a/test-output/old/Suite/CartTest.properties
+++ b/test-output/old/Suite/CartTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=SearchTest][SuiteResult context=CartTest]
+[SuiteResult context=LoginTest][SuiteResult context=RegistrationTest][SuiteResult context=CartTest][SuiteResult context=SearchTest]
