--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-picocontainer</artifactId>
     <version>7.2.3</version>
-    <scope>test</scope>
 </dependency>
     
     <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
@@ -87,9 +86,28 @@
     <version>4.3.3</version>
     <scope>test</scope>
 </dependency>
+
+      <dependency>
+             <groupId>org.apache.logging.log4j</groupId>
+             <artifactId>log4j-api</artifactId>
+             <version>2.17.2</version>
+         </dependency>
+         <dependency>
+             <groupId>org.apache.logging.log4j</groupId>
+             <artifactId>log4j-core</artifactId>
+             <version>2.17.2</version>
+         </dependency>
   </dependencies>
 
   <build>
+  <resources>
+  <resource>
+  <directory>
+  src/main/java/com/qa/resources</directory>
+  <filtering>
+  true</filtering>
+  </resource>
+  </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
