--- a/test-output/old/Suite/RegistrationTest.properties
+++ b/test-output/old/Suite/RegistrationTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=LoginTest][SuiteResult context=AddToCartTest][SuiteResult context=RegistrationTest][SuiteResult context=SearchTest]
+[SuiteResult context=LoginTest][SuiteResult context=RegistrationTest][SuiteResult context=CartTest][SuiteResult context=SearchTest]
